--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="static/css/starter-template.css" rel="stylesheet">
+    <link href="static/css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -44,7 +44,7 @@
       </div>
     </nav>
 
-    <div class="container starter-template">
+    <div class="container main-content">
       <div class="row">
 
         <form class="form-horizontal" method="POST" action="{{ url_for('change_password') }}">
