Use configured domain in placeholder
So far the placeholder in the form field used a generic domain string.

This commit passes the configured domain into the template so it may render a
more meaningful hint.

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                       'type': 'email',
                       'class': 'form-control',
                       'aria-describedby': 'emailErrors',
-                      'placeholder': 'vorname.nachname@domain.tld',
+                      'placeholder': 'vorname.nachname@' + domain,
                     }
                   )
                 }}
