--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
               </div>
 
               {% if form.email.errors %}
-              <div id="emailErrors" class="help-block">
+              <div id="emailErrors" class="col-sm-5 help-block">
                 <ul>
                 {% for error in form.email.errors %}
                   <li>{{ error }}</li>
@@ -99,7 +99,7 @@
               </div>
 
               {% if form.current_password.errors %}
-              <div id="currentErrors" class="help-block">
+              <div id="currentErrors" class="col-sm-5 help-block">
                 <ul>
                 {% for error in form.current_password.errors %}
                   <li>{{ error }}</li>
@@ -133,7 +133,7 @@
               </div>
 
               {% if form.new_password.errors %}
-              <div id="newErrors" class="help-block">
+              <div id="newErrors" class="col-sm-5 help-block">
                 <ul>
                 {% for error in form.new_password.errors %}
                   <li>{{ error }}</li>
@@ -163,7 +163,7 @@
               </div>
 
               {% if form.confirmed_password.errors %}
-              <div id="confirmedErrors" class="help-block">
+              <div id="confirmedErrors" class="col-sm-5 help-block">
                 <ul>
                 {% for error in form.confirmed_password.errors %}
                   <li>{{ error }}</li>
