Fix horizontal padding
Prevent content from sticking to the wall when folded.
Switch to fluid containers to prevent jumping of layout.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,4 @@
 body {
-  padding-top: 50px;
-}
-.main-content {
-  padding: 40px 15px;
+  /* Compensate for navbar-fixed-top */
+  padding: 70px 15px;
 }
