--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,14 @@
     {% endwith %}
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <span class="navbar-brand">Email-Passwort ändern</span>
         </div>
       </div>
     </nav>
 
-    <div class="container main-content">
+    <div class="container-fluid">
       <div class="row">
 
         <form class="form-horizontal" method="POST" action="{{ url_for('change_password') }}">
